Fix clear message z-index, remove delete button for suggestions

--- a/css/chata-styles.css
+++ b/css/chata-styles.css
@@ -125,6 +125,7 @@ body{
     align-items: center;
     color:white;
     position: relative;
+    z-index: 100000003;
 }
 
 .autoql-vanilla-popover-container{
